stylesheet: Stop using :hover:active
This breaks on touch, use just :active instead.

--- a/src/stylesheet/widgets/_switch.scss
+++ b/src/stylesheet/widgets/_switch.scss
@@ -7,11 +7,8 @@ switch {
 
   background-color: $trough_color;
 
-  &:hover:not(:checked) {
-    background-color: $trough_hover_color;
-
-    &:active { background-color: $trough_active_color; }
-  }
+  &:hover { background-color: $trough_hover_color; }
+  &:active { background-color: $trough_active_color; }
 
   > image { color: if($contrast == 'high', white, transparent); }
 
@@ -41,11 +38,8 @@ switch {
     color: $fill_text_color;
     background-color: $fill_color;
 
-    &:hover {
-      background-image: image(gtkalpha(currentColor, .1));
-
-      &:active { background-image: image(transparentize(black, .8)); }
-    }
+    &:hover { background-image: image(gtkalpha(currentColor, .1)); }
+    &:active { background-image: image(transparentize(black, .8)); }
 
     > slider {
       background-color: $slider_hover_color;
